# ClickerGameSFML

./: .clang-format  CMakeLists.txt
Engine/: CMakeLists.txt
Engine/include/: XL_ENGINE_H  xlEngine.h
Engine/include/Behaviour/: GameObject.h  IBehaviourObject.h
Engine/include/Components/: BoxCollider2D.h
Engine/include/Controls/: Button.h  Container.h  Layout.h  LayoutObject.h  RectangleButton.h  RootContainer.h  TextMesh.h
Engine/include/EventSystems/: MouseEventsSystem.h
Engine/include/EventSystems/Events/: IPointerClickHandler.h  IPointerEnterHandler.h  IPointerExitHandler.h
Engine/include/Interfaces/: IHaveCollider.h
Engine/include/Scenes/: IGameScene.h
Engine/include/SignalBus/: SignalBus.h
Engine/include/SignalBus/Signals/: ISignal.h
Engine/src/: xlEngine.cpp
Engine/src/Behavior/: GameObject.cpp  IBehaviourObject.cpp
Engine/src/Controls/: Button.cpp  Container.cpp  LayoutObject.cpp  RectangleButton.cpp  RootContainer.cpp  TextMesh.cpp
Engine/src/Scenes/: IGameScene.cpp
Engine/src/SignalBus/: SignalBus.cpp
Engine/src/SignalBus/Signals/: ISignal.cpp
Engine/src/Systems/: MouseEventsSystem.cpp
clicker/include/: G.h  Game.h  Resources.h
clicker/include/Behaviour/: GameObject.h  IBehaviourObject.h
clicker/include/Data/: GameSession.h  Upgrades.h
clicker/include/GUI/: Fonts.h
clicker/include/GUI/Controls/: ClickerButton.h  Container.h  GameText.h  HealthBar.h  MonsterSpawner.h  RectangleButton.h  RootContainer.h  SceneSwitchButton.h  ShopItem.h  UpgradeButton.h
clicker/include/GUI/Scenes/: IGameScene.h  MainScene.h
clicker/include/GUI/Sprites/: Sprites.h
clicker/include/Monsters/: BaseMonster.h
clicker/include/Scenes/: MainScene.h  Scenes.h  ShopScene.h
clicker/include/SignalBus/: SignalBus.h
clicker/include/SignalBus/Signals/: ISignal.h  Signals.h
clicker/include/Signals/: Signals.h
clicker/src/: G.cpp  Game.cpp  Resources.cpp  main.cpp
clicker/src/Behavior/: GameObject.cpp
clicker/src/GUI/: Fonts.cpp
clicker/src/GUI/Controls/: ClickerButton.cpp  Container.cpp  GameText.cpp  HealthBar.cpp  MonsterSpawner.cpp  RectangleButton.cpp  RootContainer.cpp  SceneSwitchButton.cpp  ShopItem.cpp  UpgradeButton.cpp
clicker/src/GUI/Scenes/: IGameScene.cpp  MainScene.cpp  ShopScene.cpp
clicker/src/GUI/Sprites/: Sprites.cpp
clicker/src/Monsters/: BaseMonster.cpp
clicker/src/Scenes/: Scenes.cpp
clicker/src/SignalBus/: SignalBus.cpp
clicker/src/SignalBus/Signals/: ISignal.cpp
tests/: CMakeLists.txt  SignalBusTests.cpp
